--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
                 <h2 class="section__title">Video Tour</h2>
 
                 <div class="video__container container">
-                    <p class="video__description">Find out more with our video of the most beautiful and 
-                        pleasant places for you and your family.
+                    <p class="video__description">Dive into my fields of interest via this short video edit potraying the activities I am 
+                        interested in. (Stock Video for now, update later)
                     </p>
 
                     <div class="video__content">
@@ -277,7 +277,7 @@
 
             <!--==================== PLACES ====================-->
             <section class="place section" id="place">
-                <h2 class="section__title">Choose Your Place</h2>
+                <h2 class="section__title">Visit my Portfolio</h2>
 
                 <div class="place__container container grid">
                     <!--==================== PLACES CARD 1 ====================-->
@@ -287,7 +287,7 @@
                         <div class="place__content">
                             <span class="place__rating">
                                 <i class="ri-star-line place__rating-icon"></i>
-                                <span class="place__rating-number">4,8</span>
+                                <span class="place__rating-number">n/a</span>
                             </span>
 
                             <div class="place__data">
@@ -309,7 +309,7 @@
                         <div class="place__content">
                             <span class="place__rating">
                                 <i class="ri-star-line place__rating-icon"></i>
-                                <span class="place__rating-number">5,0</span>
+                                <span class="place__rating-number">n/a</span>
                             </span>
 
                             <div class="place__data">
@@ -331,7 +331,7 @@
                         <div class="place__content">
                             <span class="place__rating">
                                 <i class="ri-star-line place__rating-icon"></i>
-                                <span class="place__rating-number">4,9</span>
+                                <span class="place__rating-number">n/a</span>
                             </span>
 
                             <div class="place__data">
