--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             </section> 
 
             <!--==================== SUBSCRIBE ====================-->
-            <section class="subscribe section">
+            <section class="subscribe section" id="subscribe">
                 <div class="subscribe__bg">
                     <div class="subscribe__container container">
                         <h2 class="section__title subscribe__title">Subscribe Our <br> Newsletter</h2>
@@ -448,13 +448,13 @@
                                 <i class="ri-link-m"></i>
                             </a>
                             <a href="https://twitter.com/anoushka_bh" target="_blank" class="footer__social">
-                                <i class="ri-twitter-fill"></i>
+                                <i class="ri-twitter-line"></i>
                             </a>
                             <a href="https://www.instagram.com/anouushhkaa/" target="_blank" class="footer__social">
-                                <i class="ri-instagram-fill"></i>
+                                <i class="ri-instagram-line"></i>
                             </a>
                             <a href="https://www.youtube.com/" target="_blank" class="footer__social">
-                                <i class="ri-youtube-fill"></i>
+                                <i class="ri-youtube-line"></i>
                             </a>
                         </div>
                     </div>
@@ -463,28 +463,28 @@
                         <h3 class="footer__subtitle">About</h3>
                         <ul>
                             <li class="footer__item">
-                                <a href="" class="footer__link">About Us</a>
+                                <a href="#about" class="footer__link">About Me</a>
                             </li>
                             <li class="footer__item">
-                                <a href="" class="footer__link">Features</a>
+                                <a href="#place" class="footer__link">Portfolios</a>
                             </li>
                             <li class="footer__item">
-                                <a href="" class="footer__link">New & Blog</a>
+                                <a href="#" class="footer__link">New & Blog</a>
                             </li>
                         </ul>
                     </div>
     
                     <div class="footer__data">
-                        <h3 class="footer__subtitle">Company</h3>
+                        <h3 class="footer__subtitle">Contact us</h3>
                         <ul>
                             <li class="footer__item">
-                                <a href="" class="footer__link">Team</a>
+                                <a href="" class="footer__link">Email us</a>
                             </li>
                             <li class="footer__item">
-                                <a href="" class="footer__link">Plan y Pricing</a>
+                                <a href="" class="footer__link">Plan</a>
                             </li>
                             <li class="footer__item">
-                                <a href="" class="footer__link">Become a member</a>
+                                <a href="#subscribe" class="footer__link">Subscribe to newsletter</a>
                             </li>
                         </ul>
                     </div>
@@ -496,7 +496,7 @@
                                 <a href="" class="footer__link">FAQs</a>
                             </li>
                             <li class="footer__item">
-                                <a href="" class="footer__link">Support Center</a>
+                                <a href="" class="footer__link">Hire/Buy</a>
                             </li>
                             <li class="footer__item">
                                 <a href="" class="footer__link">Contact Us</a>
