--- a/index.html
+++ b/index.html
@@ -484,10 +484,10 @@
                                 <a href="" class="footer__link">Email us</a>
                             </li>
                             <li class="footer__item">
-                                <a href="" class="footer__link">Plan</a>
+                                <a href="https://lu.ma/anoushka" class="footer__link">Join my sessions</a>
                             </li>
                             <li class="footer__item">
-                                <a href="#subscribe" class="footer__link">Subscribe to newsletter</a>
+                                <a href="#subscribe" class="footer__link">Newsletter</a>
                             </li>
                         </ul>
                     </div>
@@ -499,7 +499,7 @@
                                 <a href="" class="footer__link">FAQs</a>
                             </li>
                             <li class="footer__item">
-                                <a href="https://lu.ma/anoushkabh" class="footer__link">Hire/Buy</a>
+                                <a href="https://lu.ma/anoushkabh" class="footer__link">Hire me/Buy</a>
                             </li>
                             <li class="footer__item">
                                 <a href="" class="footer__link">Contact Us</a>
