--- a/index.html
+++ b/index.html
@@ -439,9 +439,9 @@
             <div class="footer__container container grid">
                 <div class="footer__content grid">
                     <div class="footer__data">
-                        <h3 class="footer__title">Travel</h3>
-                        <p class="footer__description">Travel you choose the <br> destination, 
-                            we offer you the <br> experience.
+                        <h3 class="footer__title">Connect</h3>
+                        <p class="footer__description">Feel free to shoot me <br> a message, 
+                            I'll be happy to answer.
                         </p>
                         <div>
                             <a href="https://lu.ma/anoushka" target="_blank" class="footer__social">
@@ -481,7 +481,7 @@
                         <h3 class="footer__subtitle">Contact us</h3>
                         <ul>
                             <li class="footer__item">
-                                <a href="" class="footer__link">Email us</a>
+                                <a href="mailto:anoushka.bhattacharyaaa@gmail.com" class="footer__link">Email us</a>
                             </li>
                             <li class="footer__item">
                                 <a href="https://lu.ma/anoushka" class="footer__link">Join my sessions</a>
