--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
                             <div class="place__data">
                                 <h3 class="place__title">3D Design</h3>
-                                <span class="place__subtitle">3 Dimension</span>
+                                <span class="place__subtitle">Using Blender</span>
                                 <span class="place__price">Portfolio</span>
                             </div>
                         </div>
@@ -496,7 +496,7 @@
                         <h3 class="footer__subtitle">Support</h3>
                         <ul>
                             <li class="footer__item">
-                                <a href="" class="footer__link">FAQs</a>
+                                <a href="" class="footer__link">Non Profit</a>
                             </li>
                             <li class="footer__item">
                                 <a href="https://lu.ma/anoushkabh" class="footer__link">Hire me/Buy</a>
