--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <a href="#discover" class="nav__link">Other</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#place" class="nav__link">Contact</a>
+                            <a href="#connect" class="nav__link">Contact</a>
                         </li>
                     </ul>
 
@@ -435,7 +435,7 @@
         </main> ====================-->
 
         <!--==================== FOOTER ====================-->
-        <footer class="footer section">
+        <footer class="footer section" id="contact">
             <div class="footer__container container grid">
                 <div class="footer__content grid">
                     <div class="footer__data">
