--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="swiper-wrapper">
                         <!--==================== DISCOVER 1 ====================-->
                         <div class="discover__card swiper-slide">
-                            <img src="assets/img/discover1.jpg" alt="" class="discover__img">
+                            <img src="assets/img/math-img3.png" alt="" class="discover__img">
                             <div class="discover__data">
                                 <h2 class="discover__title">Mathematics</h2>
                                 <span class="discover__description"></span>
@@ -176,7 +176,7 @@
 
                         <!--==================== DISCOVER 2 ====================-->
                         <div class="discover__card swiper-slide">
-                            <img src="assets/img/discover2.jpg" alt="" class="discover__img">
+                            <img src="assets/img/physics-img1.png" alt="" class="discover__img">
                             <div class="discover__data">
                                 <h2 class="discover__title">Physics</h2>
                                 <span class="discover__description"></span>
@@ -185,7 +185,7 @@
 
                         <!--==================== DISCOVER 3 ====================-->
                         <div class="discover__card swiper-slide">
-                            <img src="assets/img/discover3.jpg" alt="" class="discover__img">
+                            <img src="assets/img/chem-img5.png" alt="" class="discover__img">
                             <div class="discover__data">
                                 <h2 class="discover__title">Chemistry</h2>
                                 <span class="discover__description"></span>
@@ -194,7 +194,7 @@
 
                         <!--==================== DISCOVER 4 ====================-->
                         <div class="discover__card swiper-slide">
-                            <img src="assets/img/discover4.jpg" alt="" class="discover__img">
+                            <img src="assets/img/ai-img2.png" alt="" class="discover__img">
                             <div class="discover__data">
                                 <h2 class="discover__title">Artificial Intelligence</h2>
                                 <span class="discover__description"></span>
@@ -202,7 +202,7 @@
                         </div>
                    <!--==================== DISCOVER 5 ====================-->
                         <div class="discover__card swiper-slide">
-                            <img src="assets/img/discover4.jpg" alt="" class="discover__img">
+                            <img src="assets/img/engineer-img6.png" alt="" class="discover__img">
                             <div class="discover__data">
                                 <h2 class="discover__title">Engineering</h2>
                                 <span class="discover__description"></span>
@@ -210,7 +210,7 @@
                 </div>
                 <!--==================== DISCOVER 6 ====================-->
                         <div class="discover__card swiper-slide">
-                            <img src="assets/img/discover4.jpg" alt="" class="discover__img">
+                            <img src="assets/img/fullstack-img4.png" alt="" class="discover__img">
                             <div class="discover__data">
                                 <h2 class="discover__title">Full Stack Development</h2>
                                 <span class="discover__description"></span>
