--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
                         <!--==================== DISCOVER 3 ====================-->
                         <div class="discover__card swiper-slide">
-                            <img src="assets/img/chem-img5.png" alt="" class="discover__img">
+                            <img src="assets/img/chemistry-img7.png" alt="" class="discover__img">
                             <div class="discover__data">
                                 <h2 class="discover__title">Chemistry</h2>
                                 <span class="discover__description"></span>
