--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                     <div class="about2__data">
-                            <h2 class=" about2__title" text-align="right">Skillset</h2>
+                            <h2 class=" about2__title" text-align="right">Technical Skillset</h2>
                         <p class="about2__description"><b> Worked in : <br> </b>
                             Web Designing (Frontend- HTML, CSS, JavaScript) <br>
                             Graphic Designing in 2D (Illustrator, Photoshop, Figma)<br>
@@ -227,18 +227,18 @@
                 <div class="experience__container container grid">
                     <div class="experience__content grid">
                         <div class="experience__data">
-                            <h2 class="experience__number">20</h2>
-                            <span class="experience__description">Year <br> Experience</span>
+                            <h2 class="experience__number">9+</h2>
+                            <span class="experience__description">Years doing <br>Kathak Dance</span>
                         </div>
 
                         <div class="experience__data">
-                            <h2 class="experience__number">75</h2>
-                            <span class="experience__description">Complete <br> tours</span>
+                            <h2 class="experience__number">5+</h2>
+                            <span class="experience__description">Years doing<br>classical music</span>
                         </div>
 
                         <div class="experience__data">
-                            <h2 class="experience__number">650+</h2>
-                            <span class="experience__description">Tourist <br> Destination</span>
+                            <h2 class="experience__number">500+</h2>
+                            <span class="experience__description">Coding<br>Projects</span>
                         </div>
                     </div>
 
