--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
             <!--==================== EXPERIENCE ====================-->
             <section class="experience section">
-                <h2 class="section__title">With Our Experience <br> We Will Serve You</h2>
+                <h2 class="section__title">With my Passion<br> comes the dedication</h2>
 
                 <div class="experience__container container grid">
                     <div class="experience__content grid">
