--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Anoushka Bhattacharya is a 15 year old student and an aspiring computer engineer.
-                                          She is also a front-end web designer and a learning full stack developer.">
+        <meta name="description" content="Anoushka Bhattacharya is a 15 year old student in 11th grade at DPS R.K. Puram <br>
+                                          , a front-end web designer,  a learning full stack developer and an aspiring Computer Scientist.
+                                          She is also a national Kathak Dancer and a Classical Singer with immense passion and dedication in the 
+                                          fields of Computer Science, tech and STEM subjects.">
         <link rel="shortcut icon" href="assets/img/website-logo.png" type="image/png">
 
         <!--=============== REMIXICONS ===============-->
