--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a href="#discover" class="nav__link">Other</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#connect" class="nav__link">Contact</a>
+                            <a href="#contact" class="nav__link">Contact</a>
                         </li>
                     </ul>
 
