--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
                                           , a front-end web designer,  a learning full stack developer and an aspiring Computer Scientist.
                                           She is also a national Kathak Dancer and a Classical Singer with immense passion and dedication in the 
                                           fields of Computer Science, tech and STEM subjects.">
-        <link rel="shortcut icon" href="assets/img/favicon.png" type="image/png">
+        <link rel="shortcut icon" href="assets/img/al-logo.png" type="image/png">
 
         <!--=============== REMIXICONS ===============-->
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
