--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Anoushka Bhattacharya</title>
+        <title>Anoushka|Website </title>
     </head>
     <body>
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">Anoushka</a>
+                <a href="#" class="nav__logo">Anoushka Bhattacharya</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
