--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
 
                     <div class="experience__img grid">
                         <div class="experience__overlay">
-                            <img src="assets/img/experience1.jpg" alt="" class="experience__img-one">
+                            <img src="assets/img/kathak-1.png" alt="" class="experience__img-one">
                         </div>
                         
                         <div class="experience__overlay">
-                            <img src="assets/img/experience2.jpg" alt="" class="experience__img-two">
+                            <img src="assets/img/code-2.png" alt="" class="experience__img-two">
                         </div>
                     </div>
                 </div>
