--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <main class="main">
             <!--==================== HOME ====================-->
             <section class="home" id="home">
-                <img src="assets/img/home1.jpg" alt="" class="home__img">
+                <img src="assets/img/home1.png" alt="" class="home__img">
 
                 <div class="home__container container grid">
                     <div class="home__data">
@@ -93,7 +93,7 @@
                         </div>
 
                         <div class="home__info-overlay">
-                            <img src="assets/img/home2.jpg" alt="" class="home__info-img">
+                            <img src="assets/img/home2.png" alt="" class="home__info-img">
                         </div>
                     </div>
                 </div>
