--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
                                          <!-- SKILLSET -->
                    <section class="about2 section" id="about2">
                 <div class="about2__container container grid">
-                     <div class="about2__img">
+                    
+<!--                      <div class="about2__img">
                         <div class="about2__img-overlay">
                             <img src="assets/img/about1.jpg" alt="" class="about__img-one">
                         </div>
@@ -136,7 +137,8 @@
                         <div class="about2__img-overlay">
                             <img src="assets/img/about2.jpg" alt="" class="about__img-two">
                         </div>
-                    </div>
+                    </div> -->
+                    
                     <div class="about2__data">
                             <h2 class=" about2__title" text-align="right">Technical Skillset</h2>
                         <p class="about2__description"><b> Worked in : <br> </b>
