--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                          <!-- SKILLSET -->
                    <section class="about2 section" id="about2">
                 <div class="about2__container container grid">
-                    <div></div>
+                    <div><p>a</p></div>
 <!--                      <div class="about2__img">
                         <div class="about2__img-overlay">
                             <img src="assets/img/about1.jpg" alt="" class="about__img-one">
