--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             
                                          <!-- SKILLSET -->
                    <section class="about2 section" id="about2">
-                <div class="about2__container container grid" align-content=right>
+                <div class="about2__container container grid" align-content="right">
                     
 <!--                      <div class="about2__img">
                         <div class="about2__img-overlay">
