--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                                          <!-- SKILLSET -->
                    <section class="about2 section" id="about2">
                 <div class="about2__container container grid" align-content="right">
+                    <div><img src="assets/img/about1.jpg"></div>
                     
 <!--                      <div class="about2__img">
                         <div class="about2__img-overlay">
@@ -137,7 +138,7 @@
                         <div class="about2__img-overlay">
                             <img src="assets/img/about2.jpg" alt="" class="about__img-two">
                         </div>
-                    </div> -->
+                    </div>  -->
                     
                     <div class="about2__data">
                             <h2 class=" about2__title" text-align="right">Technical Skillset</h2>
