--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                                          <!-- SKILLSET -->
                    <section class="about2 section" id="about2">
                        
-<!--                 <div class="about2__container container grid" align-content="right">
-                    <div><img src="assets/img/about1.jpg"></div> -->
+             <div class="about2__container container grid" align-content="right">
+<!--                     <div><img src="assets/img/about1.jpg"></div> -->
                     
 <!--                      <div class="about2__img">
                         <div class="about2__img-overlay">
