--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
              <div class="about2__container container grid" align-content="right">
 <!--                     <div><img src="assets/img/about1.jpg"></div> -->
                     
-<!--                      <div class="about2__img">
+                       <div class="about2__img">
                         <div class="about2__img-overlay">
                             <img src="assets/img/about1.jpg" alt="" class="about__img-one">
                         </div>
@@ -139,7 +139,7 @@
                         <div class="about2__img-overlay">
                             <img src="assets/img/about2.jpg" alt="" class="about__img-two">
                         </div>
-                    </div>  -->
+                    </div>  
                     
                     <div class="about2__data" text-align="right">
                             <h2 class=" about2__title">Technical Skillset</h2>
