--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 
                     <div class="about__img">
                         <div class="about__img-overlay">
-                            <img src="assets/img/about1.jpg" alt="" class="about__img-one">
+                            <img src="assets/img/block-3.png" alt="" class="about__img-one">
                         </div>
 
                         <div class="about__img-overlay">
-                            <img src="assets/img/about2.jpg" alt="" class="about__img-two">
+                            <img src="assets/img/block-4.png" alt="" class="about__img-two">
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                     
                        <div class="about2__img">
                         <div class="about2__img-overlay">
-                            <img src="assets/img/about1.jpg" alt="" class="about__img-one">
+                            <img src="assets/img/block-3.png" alt="" class="about__img-one">
                         </div>
 
                         <div class="about2__img-overlay">
