--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                     <div class="about__data">
                             <h2 class="section__title about__title">More Information <br> About Anoushka </h2>
                         <p class="about__description">Anoushka is a 15 year old student studying in 11th grade at DPS R.K. Puram. <br>
-                          She is a front end web designer and an aspiring computer scientist. Alongside being a recipient of a national level
-                            diploma in Kathak Dance, she is also a Indian Classical Music Artist. <br>
+                          She is a front end web designer and an aspiring <b> computer scientist.</b> Alongside being a recipient of a national level
+                            diploma in <b> Kathak Dance </b>, she is also a Indian Classical Music Artist. <br>
                             She also enjoys two dimensional graphic designing 
                             as well as creative writing.
                         </p>
