--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         </div>
 
                         <div class="about2__img-overlay">
-                            <img src="assets/img/about2.jpg" alt="" class="about__img-two">
+                            <img src="assets/img/block-8.png" alt="" class="about__img-two">
                         </div>
                     </div>  
                     
