--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="home__container container grid">
                     <div class="home__data">
                         <span class="home__data-subtitle">Welcome to my website!</span>
-                        <h1 class="home__data-title">Who am I?<br> Dancer <b>Developer<br> Singer</b> Designer</h1>
+                        <h1 class="home__data-title">Who am I?<br> Dancer. <b>Developer.<br> Singer.</b> Designer.</h1>
                         <a href="#" class="button">Explore</a>
 
                     </div>
@@ -108,7 +108,8 @@
                           She is a front end web designer and an aspiring <b> computer scientist.</b> Alongside being a recipient of a national level
                             diploma in <b> Kathak Dance </b>, she is also a Indian Classical Music Artist. <br>
                             She also enjoys two dimensional graphic designing 
-                            as well as creative writing.
+                            as well as creative writing.<br>
+                            Additionally, she is also the founder of *insert name* and *insert name* and *insert position* at *insert name*. 
                         </p>
                         <a href="#" class="button">My Blog</a>
                     </div>
