--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="home__info">
                         <div>
                             <span class="home__info-title">Visit my personal blog</span>
-                            <a href="" class="button button--flex button--link home__info-button">
+                            <a href="blog/blog.html" class="button button--flex button--link home__info-button">
                                 More <i class="ri-arrow-right-line"></i>
                             </a>
                         </div>
