--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             diploma in <b> Kathak Dance </b>, she is also a Indian Classical Music Artist. <br>
                             She also enjoys two dimensional graphic designing 
                             as well as creative writing.<br>
-                            Additionally, she is also the founder of *insert name* and *insert name* and *insert position* at *insert name*. 
+                            Additionally, she is also the founder of Theraprize.In and *insert name* and *insert position* at *insert name*. 
                         </p>
                         <a href="#" class="button">My Blog</a>
                     </div>
